fix: raise contributors modal z-index above header and site-wide-banner

--- a/hlx_statics/blocks/contributors/contributors.css
+++ b/hlx_statics/blocks/contributors/contributors.css
@@ -131,7 +131,7 @@ main div.contributors-wrapper .span-Image-contributor {
 .contributor-modal {
     display: none;
     position: fixed;
-    z-index: 2000;
+    z-index: 1000001;
     left: 0;
     top: 0;
     width: 100%;
